--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #fcfbff;
+}
+
 .container {
   max-width: 1230px;
   margin: 0 auto;
